syntax = "proto3";

package api_v1;

option go_package = "api/api_v1pb";

service BookingService {
  rpc ConfirmPayment(ConfirmPaymentRequest) returns (Empty);
}

message ConfirmPaymentRequest {
  string booking_id = 1;
  bool is_confirmed = 2;
}

message Empty {
}
